@@ -93,6 +93,7 @@
 - User Options: added --metal-compiler-runtime option
 - Hardware Monitor: avoid sprintf in src/ext_iokit.c
 - Help: show supported hash-modes only with -hh
+- Makefile: prevent make failure with Apple Silicon in case of partial rebuild
 
 * changes v6.2.5 -> v6.2.6
 
